[package]
name = "candle_watcher"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "Watches candles coming from CoinBase API (cbadv-rs)"
readme = "README.md"
homepage = "https://github.com/Ohkthx/candle-watcher-rs"
repository = "https://github.com/Ohkthx/candle-watcher-rs"
keywords = ["candle", "coinbase", "coinbasepro", "coinbaseadvanced", "crypto"]
include = ["*/**.rs"]

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
#cbadv = { version = "1.2.0", features = ["config"] }
cbadv = { git = "https://github.com/ohkthx/cbadv-rs", features = ["config"] }